tests/spec/emit/snapshots/impl_block_bare_self_generic.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Container<T> { value: T }
  
  impl<T> Container<T> {
    fn get(self) -> T {
      self.value
    }
  }
  
  fn main() {
    let c = Container { value: 42 };
    let v = c.get();
  }
---
package main

type Container[T any] struct {
	value T
}

func (c Container[T]) get() T {
	return c.value
}

func main() {
	c := Container[int]{value: 42}
	c.get()
}
