tests/spec/emit/snapshots/impl_block_generic.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Box<T> { value: T }
  
  impl<T> Box<T> {
    fn new(value: T) -> Box<T> {
      Box { value: value }
    }
  }
---
package main

type Box[T any] struct {
	value T
}

func Box_new[T any](value T) Box[T] {
	return Box[T]{value: value}
}
