tests/spec/emit/snapshots/impl_concrete_generic_method.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import "go:fmt"
  
  type MyInt = int
  type MyString = string
  
  enum Either<L, R> {
    Left(L),
    Right(R),
  }
  
  impl Either<MyInt, MyString> {
    fn describe(self) -> MyString {
      match self {
        Either.Left(n) => fmt.Sprintf("int(%d)", n),
        Either.Right(s) => fmt.Sprintf("str(%s)", s),
      }
    }
  }
---
package main

import "fmt"

func MakeEitherLeft[L any, R any](arg0 L) Either[L, R] {
	return Either[L, R]{Tag: EitherLeft, Left: arg0}
}

func MakeEitherRight[L any, R any](arg0 R) Either[L, R] {
	return Either[L, R]{Tag: EitherRight, Right: arg0}
}

type MyInt = int

type MyString = string

type EitherTag uint8

const (
	EitherLeft EitherTag = iota
	EitherRight
)

type Either[L any, R any] struct {
	Tag   EitherTag
	Left  L
	Right R
}

func Either_describe(self Either[MyInt, MyString]) MyString {
	if self.Tag == EitherLeft {
		return fmt.Sprintf("int(%d)", self.Left)
	}
	return fmt.Sprintf("str(%s)", self.Right)
}
