tests/spec/emit/snapshots/impl_method_map_key_body_uses_declared_enum_bound.snap
---
source: tests/spec/emit/types.rs
description: |
  
  enum Holder<T: Comparable> {
    Empty,
  }
  
  impl<T: Comparable> Holder<T> {
    fn count(self) -> int {
      let m = Map.new<T, int>()
      m.length()
    }
  }
  
  fn main() {
    let h: Holder<string> = Holder.Empty
    let _ = h.count()
  }
---
package main

func MakeHolderEmpty[T comparable]() Holder[T] {
	return Holder[T]{Tag: HolderEmpty}
}

type HolderTag uint8

const (
	HolderEmpty HolderTag = iota
)

type Holder[T comparable] struct {
	Tag HolderTag
}

func (h Holder[T]) count() int {
	m := make(map[T]int)
	return len(m)
}

func main() {
	h := MakeHolderEmpty[string]()
	h.count()
}
