tests/spec/emit/snapshots/impl_method_map_key_body_uses_declared_struct_bound.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Box<T: Comparable> {
    value: T,
  }
  
  impl<T: Comparable> Box<T> {
    fn count(self) -> int {
      let m = Map.new<T, int>()
      m.length()
    }
  }
  
  fn main() {
    let b = Box { value: "a" }
    let _ = b.count()
  }
---
package main

type Box[T comparable] struct {
	value T
}

func (b Box[T]) count() int {
	m := make(map[T]int)
	return len(m)
}

func main() {
	b := Box[string]{value: "a"}
	b.count()
}
