tests/spec/emit/snapshots/impl_methods_share_local_variable_name.snap
---
source: tests/spec/emit/types.rs
description: |
  
  pub struct Calc {}
  impl Calc {
    pub fn wider(self) -> uint64 {
      let mut total: uint64 = 0
      total += 1
      total
    }
  
    pub fn narrower(self) -> uint32 {
      let mut total: uint32 = 0
      total += 1
      total
    }
  }
---
package main

type Calc struct{}

func (c Calc) Wider() uint64 {
	var total uint64 = 0
	total++
	return total
}

func (c Calc) Narrower() uint32 {
	var total uint32 = 0
	total++
	return total
}
